<resources>
    <string name="app_name">Cyberpay-android</string>
    <string name="credit_mask_hint">XXXX XXXX XXXX XXXX</string>
    <string name="card_number_label">Card Number</string>
    <string name="pin_number_label">Card Pin</string>
    <string name="expiry_date">Exp. Date</string>
    <string name="date_format_mm_yy">MM/YY</string>
    <string name="cvv_label">cvv</string>
    <string name="pay_label">Pay</string>
    <string name="verify">Verify</string>

    <string-array name="bank">
        <item>Select your bank</item>
        <item>Zenith International bank</item>
        <item>Wema Bank PLC</item>
        <item>Unity Bank PLC</item>
        <item>SUN Trust Bank PLC</item>
        <item>Guaranteed Trust Bank</item>
    </string-array>
</resources>
