<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CyberPayActivty">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/account_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-thin"
            android:labelFor="@+id/editText_Card_Number"
            android:text="Amount"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans"
            tools:importantForAccessibility="no" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/card_name_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_name_tv">

            <com.ndroid.CoolEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:inputType="number"
                android:paddingEnd="@dimen/second"
                android:paddingLeft="@dimen/second"
                android:paddingRight="@dimen/second"
                android:textSize="17sp"
                custom:border_radius="10"
                custom:border_stroke="2" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/label_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_below="@id/card_name_text_input"
            android:fontFamily="sans-serif-thin"
            android:labelFor="@+id/editText_Card_Number"
            android:text="@string/card_number_label"
            android:textStyle="bold"
            tools:importantForAccessibility="no" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/card_number_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_card_number">

            <com.example.cyberpay_android.ui.CardNumberEditText
                android:id="@+id/editText_Card_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="19" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/label_pin_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:focusable="false"
            android:maxLength="19"
            android:focusableInTouchMode="false"
            android:layout_below="@id/card_number_text_input"
            android:fontFamily="sans-serif-thin"
            android:labelFor="@+id/editText_pin"
            android:text="@string/pin_number_label"
            android:textStyle="bold"
            tools:importantForAccessibility="no" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pin_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_pin_number">

            <com.ndroid.CoolEditText
                android:id="@+id/editText_pin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:inputType="numberPassword"
                android:paddingEnd="@dimen/second"
                android:paddingLeft="@dimen/second"
                android:paddingRight="@dimen/second"
                android:maxLength="4"
                android:textSize="17sp"
                custom:border_radius="10"
                custom:border_stroke="2" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/label_expiry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pin_text_input"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-thin"
            android:text="@string/expiry_date"
            android:textStyle="bold"
            tools:importantForAccessibility="no" />

        <View
            android:id="@+id/centerShim"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/card_date_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_expiry_date"
            android:layout_toStartOf="@id/centerShim"
            android:layout_toLeftOf="@id/centerShim"
            android:hint=" "
            android:textColorHint="@drawable/hint_selector"
            tools:ignore="HardcodedText">

            <com.example.cyberpay_android.ui.ExpiryDateEditText
                android:id="@+id/editText_Card_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/date_format_mm_yy"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="5"
                android:textColorHint="@drawable/hint_selector" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/card_cvv_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_expiry_date"
            android:layout_toEndOf="@id/centerShim"
            android:layout_toRightOf="@id/centerShim"
            android:hint=" "
            android:textColorHint="@drawable/hint_selector"
            tools:ignore="HardcodedText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_Card_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="123"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="3"
                android:textColorHint="@drawable/hint_selector" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/label_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pin_text_input"
            android:layout_alignStart="@id/card_cvv_input"
            android:layout_alignLeft="@id/card_cvv_input"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-thin"
            android:text="@string/cvv_label"
            android:textStyle="bold"
            tools:importantForAccessibility="no" />

        <Button
            android:id="@+id/payButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/pay_label"
            android:textColor="#fff" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>